Implement lager_elogfmt_formatter

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,19 @@
-.eunit
-deps
-*.o
 *.beam
+*.o
 *.plt
-erl_crash.dump
-ebin
-rel/example_project
-.concrete/DEV_MODE
+*.swo
+*.swp
+.erlang.cookie
+.eunit
 .rebar
+.rebar3
+_*
+_build
+_deps
+_plugins
+_rel
+_tdeps
+ebin
+erl_crash.dump
+log
+logs
